fix title not centered

--- a/www/assets/styles/root.css
+++ b/www/assets/styles/root.css
@@ -44,6 +44,25 @@ main {
   flex: 1;
 }
 
+/* h1 title used on some pages */
+main > h1 {
+  font-size: 3em;
+  color: var(--color-text);
+  text-align: center;
+  padding: 15px 0 30px 0;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+main > h1 > span.material-symbols-rounded {
+  font-size: 1em;
+}
+
+/* Vertical Scrollbar, our website is in dark mode so we need to change the scrollbar color */
 ::-webkit-scrollbar {
   width: 12px;
   border-radius: 10px;
@@ -58,6 +77,7 @@ main {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #4e4e4e;
 }
+
 
 /* Disable the default text-decoration on links */
 a {
